@@ -33,6 +33,7 @@ static NSString *const kLanguageRestrictionParamName = @"lr";
 static NSString *const kLocationParamName = @"location";
 static NSString *const kLocationRadiusParamName = @"location-radius";
 static NSString *const kCaptionParamName = @"caption";
+static NSString *const k3DParamName = @"3d";
 static NSString *const kInlineParamName = @"inline";
 static NSString *const kUploaderParamName = @"uploader";
 
@@ -124,6 +125,17 @@ static NSString *const kUploaderParamName = @"uploader";
 
 - (BOOL)hasCaptions {
   return [self boolValueForParameterWithName:kCaptionParamName
+                                defaultValue:NO];
+}
+
+- (void)setShouldRequire3D:(BOOL)flag {
+  [self addCustomParameterWithName:k3DParamName
+                         boolValue:flag
+                      defaultValue:NO];
+}
+
+- (BOOL)shouldRequire3D {
+  return [self boolValueForParameterWithName:k3DParamName
                                 defaultValue:NO];
 }
 
